# wmgb-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  test.yml
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/routes/: __init__.py  health.py  predictions.py
app/core/: __init__.py  config.py  errors.py  logging.py
app/models/: __init__.py  schemas.py
app/services/: apolo_classifier.py  base.py  general_classifier.py
app/utils/aws/s3/: client.py
app/utils/inference_models/: mobilenet_preprocessor.py  model_loader.py  model_loader_manager.py  model_repository.py  preprocessor.py  repository_factory.py
scripts/: check-s3.sh  debug-docker.sh  download_models.py  entrypoint.sh  optimized-build.sh  rebuild.sh  run-docker.sh  run-github-actions-locally.sh  update-and-build.sh
tests/: __init__.py  conftest.py
tests/integration/app/routes/: test_predictions_integration.py
tests/integration/utils/: test_model_loader_integration.py
tests/test_data/models/: dummy_model.h5
tests/unit/api/: test_health.py  test_predictions.py
tests/unit/services/: test_general_classifier.py
tests/unit/utils/inference_models/: create_dummy_model.py  test_mobilenet_preprocessor.py  test_model_loader.py  test_model_loader_manager.py  test_model_repository.py
